--- a/backend/package.json
+++ b/backend/package.json
@@ -86,6 +86,7 @@
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.3",
     "@types/nodemailer": "^6.4.6",
     "@types/supertest": "^2.0.12",
